stopped preloader text from wrapping over

--- a/css/style.css
+++ b/css/style.css
@@ -25,19 +25,22 @@ body {
     text-align: center;
     color: #fff;
 }
+
 .preloader-content img {
     width: 700px;
     height: auto;
- }
+}
 
 .preloader.hidden {
     transform: translateY(-100%);
 }
+
 .text-flicker-in-glow h1{
-    color: #fff;
+  color: #fff;
 	-webkit-animation: text-flicker-in-glow 4s linear both;
 	        animation: text-flicker-in-glow 4s linear both;
 }
+
 @-webkit-keyframes text-flicker-in-glow {
   0% {
     opacity: 0;
@@ -163,6 +166,7 @@ body {
     text-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1);
   }
 }
+
 @keyframes text-flicker-in-glow {
   0% {
     opacity: 0;
@@ -289,12 +293,14 @@ body {
   }
 }
 
-
 .tracking-in-contract-bck {
   -webkit-animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-  animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+          animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
+.tracking-in-contract-bck h1 {
+  white-space: nowrap;
+}
 
 @-webkit-keyframes tracking-in-contract-bck {
   0% {
@@ -312,6 +318,7 @@ body {
     opacity: 1;
   }
 }
+
 @keyframes tracking-in-contract-bck {
   0% {
     letter-spacing: 1em;
@@ -328,11 +335,9 @@ body {
     opacity: 1;
   }
 }
-  
-  
 
 .navbar {
-    background: #333; 
+    background: #000; 
     color: #fff; 
     padding: 10px 0;
     text-align: right;
